--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Expo
+.expo/
+.expo-shared/
+web-build/
+
+# Build
+dist/
+build/
+
+# OS
+.DS_Store
+Thumbs.db
